# apps/platform-core/src/modules/order/dto/mod.rs
@@ -1,5 +1,7 @@
 mod pre_request;
+mod price_snapshot;
 
 pub use pre_request::{
     CreateTradePreRequestRequest, TradePreRequestResponse, TradePreRequestResponseData,
 };
+pub use price_snapshot::{FreezeOrderPriceSnapshotResponse, FreezeOrderPriceSnapshotResponseData};
