# apps/platform-core/src/modules/order/dto/price_snapshot.rs
@@ -1,0 +1,13 @@
+use crate::modules::order::domain::OrderPriceSnapshot;
+use serde::{Deserialize, Serialize};
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct FreezeOrderPriceSnapshotResponseData {
+    pub order_id: String,
+    pub snapshot: OrderPriceSnapshot,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct FreezeOrderPriceSnapshotResponse {
+    pub data: FreezeOrderPriceSnapshotResponseData,
+}
